Fix RewriteRuleService tests